--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Nunito", sans-serif;
+
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,3 +18,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.comfortaa {
+  font-family: "Comfortaa", sans-serif;
+}
+
+.nunito {
+  font-family: "Nunito", sans-serif;
+}
+
+.roboto {
+  font-family: "Roboto", sans-serif;
+}
