change overall bg color and hero bg color

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  background-color: #e5e5e5;
+}
+
 .comfortaa {
   font-family: "Comfortaa", sans-serif;
 }
